# nateroids

./: CLAUDE.md  Cargo.toml  README.md  SPACESHIP_LIGHTING_DEBUG.md  readme.md  rustfmt.toml
.claude/: settings.local.json
.claude/bevy_migration/: bevy-0.17.2-migration-plan-upgraded.md  bevy-0.17.2-migration-plan.md  bevy-0.18.0-migration-plan.md
.claude/commands/: bake_nateroid.md  launch_nateroids.md
.claude/json/: Transform.json
.claude/plans/: COLOR_1.md  bevy-0.17.0-migration.md  bloom_stars_bug_bisect.md  bug.md  bundle-upgraded.md  bundle.md  extract-camera-library-upgraded.md  frame_to_fit.md  merge-actor-struct-upgraded.md  merge-actor-struct.md  multiple-window-restore.md  portal-test-upgraded.md  portal-test.md  portal-upgraded.md  portal.md  script.md  simplify.md  text_mesh.md  zoom_to_fit_pr.md
.github/workflows/: ci.yml
assets/blend/: README.md  nateroid_bake_config.json  nateroids_bake_config.json  prepare_for_bake.py
assets/models/: Bullets Pickup.glb  Spaceship.glb
assets/nateroid/: bake_manifest.txt
assets/nateroids/: bake_manifest.txt  nateroids.glb
docs/as-built/: input-event-pattern.md
examples/: bloom_layer_bug.rs  dual_camera_bug.rs
scripts/: zoom_dance.sh  zoom_dance.toml
src/: asset_loader.rs  constants.rs  despawn.rs  game_input.rs  global_input.rs  main.rs  orientation.rs  physics.rs  schedule.rs  splash.rs  state.rs  switches.rs  traits.rs  window_restore.rs
src/actor/: aabb.rs  actor_config.rs  actor_settings.rs  actor_spawner.rs  actor_template.rs  collision_detection.rs  constants.rs  flame_gizmo.rs  game_layer.rs  missile.rs  mod.rs  nateroid.rs  settings.rs  spaceship.rs  spaceship_control.rs  spaceship_diagnostics.rs  spawn_stats.rs  teleport.rs  thrust_gizmo.rs
src/actor/flame_gizmo/: death_effect.rs  flicker.rs  mod.rs  thruster.rs
src/actor/nateroid/: constants.rs  death_materials.rs  mod.rs  settings.rs  spawn.rs
src/camera/: camera_game.rs  camera_star.rs  camera_ui.rs  cameras.rs  components.rs  config.rs  constants.rs  focus_gizmo.rs  game.rs  game_camera.rs  lights.rs  mod.rs  move_queue.rs  pan_orbit_ext.rs  rendering.rs  required_components.rs  selection.rs  settings.rs  spot_lights.rs  star.rs  star_camera.rs  star_twinkling.rs  stars.rs  support.rs  ui.rs  zoom.rs
src/camera/settings/: camera.rs  mod.rs  star.rs  zoom.rs
src/input/: bei_extras.rs  constants.rs  global_shortcuts.rs  mod.rs  ship_controls.rs
src/playfield/: boundary.rs  boundary_face.rs  constants.rs  mod.rs  planes.rs  portals.rs  screen_boundary.rs  types.rs
src/playfield/boundary/: constants.rs  gizmo.rs  mod.rs  portal_render.rs  teleport.rs
src/playfield/boundary/portal_render/: drawing.rs  geometry.rs  intersection.rs  mod.rs
src/playfield/portals/: actor.rs  actor_portals.rs  constants.rs  mod.rs  portal.rs  portal_settings.rs  settings.rs
src/playfield/portals/actor/: boundary_geometry.rs  mod.rs  state.rs  visual_lifecycle.rs
src/splash/: camera_animation.rs  mod.rs  skip.rs  ui.rs
tests/: bei_chord_overlap.rs
