[package]
edition = "2024"
license = "Apache-2.0 OR MIT"
name    = "nateroids"
version = "0.18.0"

[lints.clippy]
# Our strict lints
expect_used = "deny"
panic       = "deny"
unwrap_used = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
cargo_common_metadata   = "allow"
multiple_crate_versions = "allow"
needless_pass_by_value  = "allow"
option_if_let_else      = "allow"
too_many_arguments      = "allow"
type_complexity         = "allow"
wildcard_imports        = "allow"

[lints.rust]
missing_docs = "deny"

[dependencies]
avian3d = { version = "0.6.0", features = ["debug-plugin", "parallel", "simd"] }
bevy = { version = "0.18.1", features = ["bevy_dev_tools", "bevy_remote"] }
bevy-inspector-egui = "0.36.0"
bevy_brp_extras = "0.19.0"
bevy_enhanced_input = "0.24.1"
bevy_kana = { version = "0.0.2", features = ["input"] }
bevy_liminal = { git = "https://github.com/natepiano/bevy_liminal", rev = "572cd0fc44879cf62223cfc91a5a08ee57bf7d32" }
bevy_lagrange = { version = "0.0.1", features = ["bevy_egui", "fit_overlay"] }
bevy_window_manager = "0.18.3"
rand = "0.10.0"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 12
debug         = false
lto           = false
opt-level     = 3
