[package]
categories  = ["games"]
description = "Asteroids-inspired game built with Bevy"
edition     = "2024"
keywords    = ["asteroids", "bevy", "game"]
license     = "Apache-2.0 OR MIT"
name        = "nateroids"
repository  = "https://github.com/natepiano/nateroids"
version     = "0.18.0"

[lints.clippy]
# Our strict lints
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
panic                           = "deny"
unreachable                     = "deny"
unwrap_used                     = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
multiple_crate_versions = "allow" # Transitive deps — out of our control
needless_pass_by_value  = "allow" # Bevy systems require owned params
option_if_let_else      = "allow" # False positives with Bevy reflect macros
redundant_pub_crate     = "allow" # cargo mend is the visibility authority, not clippy
too_many_arguments      = "allow" # Bevy systems often require many params
type_complexity         = "allow" # Bevy query types are inherently complex
wildcard_imports        = "allow" # Bevy prelude convention

[lints.rust]
missing_docs = "deny"

[dependencies]
avian3d             = { version = "0.6.1", features = ["debug-plugin", "parallel", "simd"] }
bevy                = { version = "0.18.1", features = ["bevy_dev_tools", "bevy_remote"] }
bevy-inspector-egui = "0.36.0"
bevy_brp_extras     = "0.19.0"
bevy_enhanced_input = "0.24.3"
bevy_kana           = { version = "0.0.3", features = ["input"] }
bevy_lagrange       = { version = "0.0.1", features = ["fit_overlay"] }
bevy_liminal        = { git = "https://github.com/natepiano/bevy_liminal", rev = "572cd0fc44879cf62223cfc91a5a08ee57bf7d32" }
bevy_window_manager = "0.20.2"
rand                = "0.10.0"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 12
debug         = false
lto           = false
opt-level     = 3
